Add some code toindex and css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <title>City Brake Quiz</title>
+    <title>City Quiz</title>
 </head>
-<body>
-    <h1>Welcome to City quiz!</h1>
-
-    <script src="assets/js/script.js"></script>
+<body class="body">
+    <h1>Welcome to City Quiz!</h1>
+    <div class="flex">
+    <div class="germany">
+        <p>What is the capital city of Germany?</p>
+    </div>
+    <div class="france"></div>
+    <div class="italy"></div>
+    <div class="england"></div>
+    <div class="australia"></div>
+    <div>
 </body>
 </html>
