Add background styling,input filed and submit buttons

--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
 <body class="body">
     <h1>Welcome to City Quiz!</h1>
     <div class="flex">
-    <div class="germany">
+    <div id="germany">
         <p>What is the capital city of Germany?</p>
+        <input type="text">
+        <button>Submit</button>
     </div>
-    <div class="france"></div>
-    <div class="italy"></div>
-    <div class="england"></div>
-    <div class="australia"></div>
+    <div id="france">
+        <p>What is the capital city of France?</p>
+        <input type="text">
+        <button>Submit</button>
+    </div>
+    <div id="italy">
+        <p>What is the capital city of Italy?</p>
+        <input type="text">
+        <button>Submit</button>
+    </div>
+    <div id="england">
+        <p>What is the capital city of England?</p>
+        <input type="text">
+        <button>Submit</button>
+    </div>
+    <div id="australia">
+        <p>What is the capital city Australia?</p>
+        <input type="text">
+        <button>Submit</button>
+    </div>
     <div>
 </body>
 </html>
