Update styling.Added background color to clarify text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>Welcome to City Quiz!</h1>
     <div class="flex">
     <div id="germany">
+        <div class="ger">
         <p>What is the capital city of Germany?</p>
+        </div>
         <input type="text">
         <button>Submit</button>
     </div>
