--- a/index.html
+++ b/index.html
@@ -18,25 +18,37 @@
         <button>Submit</button>
     </div>
     <div id="france">
+        <div class="fr">
         <p>What is the capital city of France?</p>
+        </div>
         <input type="text">
         <button>Submit</button>
     </div>
     <div id="italy">
+        <div class="itl">
         <p>What is the capital city of Italy?</p>
+        </div>
         <input type="text">
         <button>Submit</button>
     </div>
     <div id="england">
+        <div class="eng">
         <p>What is the capital city of England?</p>
+        </div>
         <input type="text">
         <button>Submit</button>
     </div>
     <div id="australia">
+        <div class="austr">
         <p>What is the capital city Australia?</p>
+        </div>
         <input type="text">
         <button>Submit</button>
     </div>
     <div>
+        <div class="score">
+            <p class="scores">Correct Answers <span id="score">0</span></p>
+            <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+        </div>
 </body>
 </html>
