--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
         <input type="text">
         <button>Submit</button>
     </div>
-    <div>
+    </div>
         <div class="score">
             <p class="scores">Correct Answers <span id="score">0</span></p>
             <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
         </div>
+        <script src="assets/js/script.js"></script>
 </body>
 </html>
