Update submit button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>City Quiz</title>
 </head>
+<!--Main page-->
 <body class="body">
     <h1>Welcome to City Quiz!</h1>
     <div class="flex">
@@ -15,35 +16,35 @@
         <p>What is the capital city of Germany?</p>
         </div>
         <input type="text">
-        <button>Submit</button>
+        <button class="submit-btn">Submit</button>
     </div>
     <div id="france">
         <div class="fr">
         <p>What is the capital city of France?</p>
         </div>
         <input type="text">
-        <button>Submit</button>
+        <button class="submit-btn">Submit</button>
     </div>
     <div id="italy">
         <div class="itl">
         <p>What is the capital city of Italy?</p>
         </div>
         <input type="text">
-        <button>Submit</button>
+        <button class="submit-btn">Submit</button>
     </div>
     <div id="england">
         <div class="eng">
         <p>What is the capital city of England?</p>
         </div>
         <input type="text">
-        <button>Submit</button>
+        <button class="submit-btn">Submit</button>
     </div>
     <div id="australia">
         <div class="austr">
         <p>What is the capital city Australia?</p>
         </div>
         <input type="text">
-        <button>Submit</button>
+        <button class="submit-btn">Submit</button>
     </div>
     </div>
         <div class="score">
