--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <p class="scores">Correct Answers <span id="score">0</span></p>
             <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
         </div>
+        <div class="reset-container">
+        <button class="reset-btn">Reset Quiz</button>
+        </div>
 
         <script src="assets/js/script.js"></script>
 </body>
