Makes reset button workig

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
         </div>
         <div class="reset-container">
-        <button class="reset-btn">Reset Quiz</button>
+        <button id="resetButton">Reset Quiz</button>
         </div>
 
         <script src="assets/js/script.js"></script>
