Add high score button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>City Quiz</title>
 </head>
-<!--Main page-->
+<!-- Main page -->
 <body class="body">
     <h1>Welcome to City Quiz!</h1>
     <div class="flex">
@@ -51,8 +51,13 @@
             <p class="scores">Correct Answers <span id="score">0</span></p>
             <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
         </div>
+        <!-- High score -->
+         <div class="high-scr-btn">
+            <button id="highScore">High Score</button>
+         </div>
+        <!-- Reset button -->
         <div class="reset-container">
-        <button id="resetButton">Reset Quiz</button>
+            <button id="resetButton">Reset Quiz</button>
         </div>
 
         <script src="assets/js/script.js"></script>
