Add highscore counter page

--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
             <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
         </div>
         <!-- High score -->
-         <div class="high-scr-btn">
-            <button id="highScore">High Score</button>
-         </div>
+            <div class="view-highscores">
+                <a href="highscore.html" class="btn">View High Scores</a>
+            </div>
         <!-- Reset button -->
         <div class="reset-container">
             <button id="resetButton">Reset Quiz</button>
         </div>
+        <!-- js script link -->
+     <script src="assets/js/script.js"></script>
 
-        <script src="assets/js/script.js"></script>
 </body>
 </html>
