--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
         </div>
         <!-- High score -->
             <div class="view-highscores">
-                <a href="highscore.html" class="btn">View High Scores</a>
+                <a href="highscore.html" class="btn">High Scores</a>
             </div>
         <!-- Reset button -->
         <div class="reset-container">
             <button id="resetButton">Reset Quiz</button>
         </div>
+        <footer>Created by: Gediminas Luksevicius</footer>
         <!-- js script link -->
      <script src="assets/js/script.js"></script>
 
