Add css styling

--- a/highscore.html
+++ b/highscore.html
@@ -23,7 +23,17 @@
     <div class="container">
         <div id="quiz-area">
             <h2>High Scores Table</h2>
-            <table id="highscores"></table>
+            <table id="highscores">
+                <tbody>
+                    <tr>
+                        <td style="font-weight: bolder;">High Score</td>
+                    </tr>
+                    <tr>
+                        <td style="font-weight: bold;">User Name</td>
+                        <td style="font-weight: bold;">Score</td>
+                    </tr>
+                </tbody>
+            </table>
             <!-- Button to go back to the quiz -->
             <a href="index.html" class="btn">Go Back</a>
         </div>
