--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Welcome to City Quiz!</h1>
     <div class="flex">
     <div id="germany">
-        <div class="ger" name="text">
+        <div class="ger">
         <p>What is the capital city of Germany?</p>
         </div>
         <input type="text">
