Add required attribute to html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="ger">
         <p>What is the capital city of Germany?</p>
         </div>
-        <input type="text">
+        <input type="text" name="name" required>
         <button class="submit-btn">Submit</button>
     </div>
     <div id="france">
