Add more readme file content

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <div class="reset-container">
             <button id="resetButton">Reset Quiz</button>
         </div>
+        <!-- Footer -->
         <footer>Created by: Gediminas Luksevicius</footer>
         <!-- js script link -->
      <script src="assets/js/script.js"></script>
